test_regress/t/t_enum_bad_dup.out
%Error: t/t_enum_bad_dup.v:11:5: Duplicate declaration of enum value: DUP_VALUE
   11 |     DUP_VALUE = 3
      |     ^~~~~~~~~
        t/t_enum_bad_dup.v:10:5: ... Location of original declaration
   10 |     DUP_VALUE = 2,
      |     ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
